Fix Button Alignment
Fixed the button alignment to now display under the GUi.

> enhancement bug organiation

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -18,3 +18,7 @@
  	-fx-font-size: 15.0px;
     -fx-font-weight: bold;
  }
+ 
+ .button {
+ 	-fx-background-color: #ff0000;
+ }
